# trading_bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
scripts/: build_package.sh
src/Opportunities/: Opportunities.py  OpportunitiesStats.py  OpportunitiesURL.py  Opportunity.py  OpportunityTickers.py
src/Strategy/: Strategy.py
src/TechnicalIndicators/: TechnicalIndicators.py
src/alpaca_interaction/: AlpacaKeys.py  Market.py  MarketOrder.py  Trader.py
src/backtest/: BacktesterJob.py  backtester.py
src/indicators/: TechnicalIndicators.py
src/notification/: Message.py  SlackClient.py
src/positions/: Positions.py
src/requests/: HTTPRequests.py  HTTPRequestsAsync.py
src/scheduler/: Schedule.py  Scheduler.py
src/strategies/: Strategy.py
src/trading/: AlpacaKeys.py  MarketOrder.py  TradingClient.py  TradingJob.py
test/: test_AlpacaKeys.py
