[project]
name = "trading_bot"
version = "0.0.1"
authors = [
  { name="Patrick Wardle", email="paddy.wardle@yahoo.com" },
]
description = "Python trading bot."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
src-layout = true  # Enable the src layout

[tool.hatch.build.targets.wheel]
packages = ["src/alpaca_interaction", "src/indicators", "src/notification", "src/opportunities", "src/positions", "src/scheduler", "src/strategies", "src/trading"]  # Adjust this to your project structure